# AI-medical-writing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pinecone_rag_final.ipynb  pinecone_rag_testing.ipynb  projectDraft.txt  pyproject.toml  pytest.ini  requirements.txt  text.md
backend/api/: admin_overrides_loader.py  admin_routes.py  admin_ui_html.py  auth.py  dependencies.py  login_ui_html.py  routes.py
backend/core/: confidence.py  config.py  groq_client.py  llm_client.py  models.py  ollama_client.py
backend/data/: __init__.py  compliance_rules.py  confidence_data.py  models_config.py  regulatory_guidelines.py  sample_documents.py  section_templates.py
backend/db/: admin_overrides.json  finalized_store.py  session_store.py  user_store.py
backend/db/registered_users/: users.json
backend/services/: compliance_service.py  generation_service.py  pinecone_retriever.py  rag_service.py
backend/utils/: helpers.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/brand/: BrandLogo.jsx
frontend/src/data/: constants.js  theme.js
frontend/src/pages/: AnalyticsPage.jsx  CompliancePage.jsx  FeedbackPage.jsx  FinalizedDocumentsPage.jsx  GeneratePage.jsx  IngestPage.jsx  LoginPage.jsx  ReviewPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js
frontend/src/store/: appStore.js
scripts/: generate_cli.py
tests/integration/: test_pipeline.py
tests/unit/: test_compliance.py  test_groq_client.py
(+11 files in other folders)
