[project]
name = "ctdgen-full"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "faiss-cpu==1.8.0",
    "fastapi==0.115.0",
    "starlette==0.38.6",
    "groq>=0.12.0",
    "httpx==0.27.2",
    "numpy==1.26.4",
    "ollama>=0.3.0",
    "pandas>=2.3.3",
    "pdfplumber==0.11.4",
    "pinecone>=8.1.2",
    "pinecone-client>=6.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "python-docx>=1.2.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "reportlab>=4.4.10",
    "requests>=2.31.0",
    "scikit-learn==1.5.2",
    "sentence-transformers==3.2.1",
    "urllib3>=1.26.0,<3.0.0",
    "uvicorn[standard]==0.30.6",
    "pypandoc>=1.15",
]
